template/src/snapshots/template__assignment__tests__assignment_exercise.v.snap
---
source: src/assignment.rs
expression: exercise_file(&tmpl)
---
From sys_verif Require Import options.
From stdpp Require Import fin_maps fin_sets gmap.

Open Scope Z_scope.

Section map.
  Context {V: Type}.
  Implicit Types (k: Z) (v: V) (m: gmap Z V) (s: gset Z).

  Lemma map_lookup_delete_insert (m: gmap Z V) (k: Z) (v: V) :
    delete k (<[ k := v ]> m) !! k = None.
  Proof.
    Search ((delete _ _) !! _).
    rewrite lookup_delete //.
  Qed.

  Lemma map_delete_insert (m: gmap Z V) (k: Z) (v: V) :
    delete k (<[ k := v ]> m) = delete k m.
  Proof.
    apply map_eq.
    intros k'.
    destruct (decide (k' = k)); subst.
    - admit.
  Admitted.

  Lemma set_property_manual_proof s1 s2 k :
    (s1 ∪ s2) ∖ {[k]} = (s1 ∖ {[k]}) ∪ (s2 ∖ {[k]}).
  Proof.
    (*| Set lemmas can be quite hard to use. Here's a manual proof, where we
    happen to find exactly the required lemma: |*)
    Search "∪" "∖".
    (*| The set library is highly general and we will need the `_L` variants of
    the lemmas for the `rewrite` tactic to work. |*)
    rewrite difference_union_distr_l_L //.
  Qed.

  (*| We can use much more powerful automation for this proof. |*)
  Lemma set_property s1 s2 k :
    (s1 ∪ s2) ∖ {[k]} = (s1 ∖ {[k]}) ∪ (s2 ∖ {[k]}).
  Proof.
    set_solver.
  Qed.

  Lemma set_property2 s1 s2 k :
    k ∉ s1  →
    (s1 ∪ s2) ∖ {[k]} = s1 ∪ (s2 ∖ {[k]}).
  Proof.
    set_solver.
  Qed.

  Lemma set_property3 s1 s2 :
    (∀ x, x ∈ s1 → 3 < x) →
    (s1 ∪ s2) ∖ {[2]} = s1 ∪ (s2 ∖ {[2]}).
  Proof.
  Admitted.
End map.
